
- wxGridCellAttrProvider class API changed, you will need to update your code
  if you derived any classes from it

- wxImage::ComputeHistogram()'s signature changed to 
  unsigned long ComputeHistogram(wxImageHistogram&) const

- wxEvtHandler cannot be copied/assigned any longer - this never worked but
  now it results in compile-time error instead of run-time crashes

wxMSW:

- build system changed: setup.h is not a static file in include/wx any more
  but is created as part of the build process under lib/<toolkit>/wx/include
  where <toolkit> is of the form (msw|univ)[dll][u][d]. You'll need to update
  the include path in your make/project files appropriately. Furthermore,
  xpm.lib is no longer used by wxMSW, it was superseded by the wxXPMDecoder
  class. You'll need to remove all references to xpm.lib from your 
  make/project files.

- child frames appear in the taskbar by default now, use wxFRAME_NO_TASKBAR
  style to avoid it, wxFRAME_FLOAT_ON_PARENT style is now obsolete and has no
  effect

- all overloads of wxDC::SetClippingRegion() combine the given region with the
  previously selected one instead of replacing it

- wxGetHomeDir() uses HOME environment variable and if it is set will not
  return the programs directory any longer but its value (this function has
  never been meant to return the programs directory anyhow)
  
- wxHTML apps don't need to include wx/html/msw/wxhtml.rc in resources file
  anymore. The file was removed from wxMSW

Unix ports:

- You should use `wx-config --cxxflags` in your makefiles instead of
  `wx-config --cflags` for compiling C++ files. CXXFLAGS contains CFLAGS
  and the compiler flags for C++ files only, CFLAGS should still be used
  to compile pure C files.


OTHER CHANGES
=============

2.3.3
-----

wxBase:

- wxSemaphore class added, many fixed to wxCondition and wxThread (K.S. Sreeram)
- fixes to the command line parsing error and usage messages